--- a/client/styles.css
+++ b/client/styles.css
@@ -187,6 +187,15 @@ a.list-group-item {
   margin: auto 20px;
 }
 
+.waitTimestamp {
+  position: absolute;
+  height: 2.5em;
+  right: 10%;
+  top: 0;
+  bottom: 0;
+  margin: auto 20px;
+}
+
 .loading {
   position: fixed;
   top: 50%;
