--- a/client/styles.css
+++ b/client/styles.css
@@ -189,11 +189,12 @@ a.list-group-item {
 
 .waitTimestamp {
   position: absolute;
-  height: 2.5em;
+  height: 1.5em;
   right: 10%;
   top: 0;
   bottom: 0;
   margin: auto 20px;
+  font-size: 12px;
 }
 
 .loading {
